force-app/main/default/objects/Error_Log__c/fields/Lod_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Lod_DateTime__c</fullName>
    <description>The date and time this error was logged.</description>
    <inlineHelpText>The date and time this error was logged.</inlineHelpText>
    <label>Lod Date/Time</label>
    <type>DateTime</type>
</CustomField>