force-app/main/default/objects/Error_Log__c/fields/Log_Details__c.field-meta.xml
<CustomField>
    <fullName>Log_Details__c</fullName>
    <description
  >The full detail/message content of the logged error, such as a stack trace or error text.</description>
    <inlineHelpText
  >Enter the full details of the error, such as a stack trace or error message.</inlineHelpText>
    <label>Log Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>