force-app/main/default/objects/Error_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description
  >The name of the process, flow, or job that generated this error.</description>
    <inlineHelpText
  >Enter the name of the process, flow, or job that generated this error.</inlineHelpText>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>